feature/homepage V2 done
I changed it so the drop section is in the wrapper

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ body {
 .index-drop {
     display: flex;
     flex-direction: column;
-    padding: 0px 220px 0px 220px;
+    padding-top: 20px;
 }
 
 .index-drop a {
